# crypto-arb-monitor

./: .gitignore  README.ko.md  workflow.md
.claude/hooks/scripts/: _context_lib.py
docs/: requirements.md
planning/: api-design.ko.md  api-design.md  system-architecture.ko.md  system-architecture.md
research/: exchange-api-analysis.ko.md  exchange-api-analysis.md  tech-decision-matrix.md  tech-stack-analysis.ko.md  tech-stack-analysis.md
src/: .env.example
src/backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_initial_schema.py
src/backend/app/: __init__.py  config.py  database.py  main.py
src/backend/app/api/: alerts.py  asset_status.py  exchanges.py  gate_lending.py  health.py  prices.py  router.py  spreads.py
src/backend/app/connectors/: base.py  binance.py  bithumb.py  bybit.py  coinone.py  gate.py  upbit.py
src/backend/app/models/: __init__.py  alert.py  exchange.py  price.py  spread.py  user.py
src/backend/app/schemas/: alert.py  common.py  price.py  spread.py
src/backend/app/services/: alert_engine.py  asset_status.py  exchange_manager.py  gate_lending.py  price_store.py  spread_calculator.py  telegram_bot.py
src/backend/app/utils/: enums.py
src/backend/app/ws/: handler.py
src/backend/tests/: conftest.py
src/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx
tests/: test_integration.py
translations/: glossary.yaml
(+23 files in other folders)
